...
          @delete-task="reminderStore.deleteReminder(reminder.id)" />
      </div>
    </div>
  </div>

  <div class="bottom-action-bar">
    <app-button color="red" :text="'Créer une nouvelle tâche'" @click="openSheet" />
  </div>

  <div v-if="isSheetOpen" class="overlay" @click="closeSheet"></div>

  <bottom-sheet :isSheetOpen="isSheetOpen" :editingReminder="editingReminder" @close="closeSheet"></bottom-sheet>
</template>
...
